Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126960

qdoc: No warning generated for a missing qhp subproject index title

XMLWordPrintable

    • 93dc1b5a4 (dev), bcff0084e (6.8), e5001f1dd (dev), d936d6995 (6.8)
    • DaVinci 100

      Given a following qhp subproject configuration:

      qhp.QtQuick.subprojects         = qmltypes
      
      qhp.QtQuick.subprojects.qmltypes.title = QML Types
      qhp.QtQuick.subprojects.qmltypes.indexTitle = Nonexistent page title
      qhp.QtQuick.subprojects.qmltypes.selectors = qmltype
      qhp.QtQuick.subprojects.qmltypes.sortPages = true
      

      QDoc fails to warn that the index title is not found. The generated .qhp file contains

      <section ref="" title="QML Types">
      

      for the section, resulting in obvious issues when browsing the documentation in assistant/Qt Creator.

        For Gerrit Dashboard: QTBUG-126960
        # Subject Branch Project Status CR V

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes